hphp/test/zend/bad/tests/lang/type_hints_001.php.expectf
Catchable fatal error: Argument 1 passed to type_hint_foo() must be an instance of Foo, instance of Bar given, called in %s on line 16 and defined in %s on line 9